LMS_backend/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: $APP_NAME
  name: $APP_NAME
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: $APP_NAME
  template:
    metadata:
      labels:
        k8s-app: $APP_NAME
    spec:
      containers:
        - image: $IMAGE
          name: $APP_NAME
          imagePullPolicy: Always
      imagePullSecrets:
        - name: $IMAGE_PULL_SECRET
