LMS_backend/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME-service-ingress
  namespace: dev
spec:
  rules:
    - host: $APP_NAME.dev.geniussystems.com.np
      http:
        paths:
          - backend:
              service:
                name: $APP_NAME-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - secretName: dev-geniussystems
